# free-claude

./: .env  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  claude-pick  nvidia_nim_models.json  pyproject.toml
.github/workflows/: tests.yml
api/: __init__.py  app.py  command_utils.py  dependencies.py  detection.py  optimization_handlers.py  request_utils.py  routes.py
api/models/: __init__.py  anthropic.py  responses.py
cli/: __init__.py  entrypoints.py  manager.py  process_registry.py  session.py
config/: env.example  logging_config.py  nim.py  settings.py
messaging/: __init__.py  commands.py  event_parser.py  handler.py  limiter.py  models.py  session.py  transcript.py  transcription.py
messaging/rendering/: __init__.py  discord_markdown.py  telegram_markdown.py
messaging/trees/: __init__.py  data.py  processor.py  queue_manager.py  repository.py
providers/: __init__.py  base.py  exceptions.py  openai_compat.py  rate_limit.py
providers/common/: __init__.py  error_mapping.py  heuristic_tool_parser.py  message_converter.py  sse_builder.py  text.py  think_parser.py  utils.py
providers/llamacpp/: __init__.py  client.py
providers/lmstudio/: __init__.py  client.py
providers/nvidia_nim/: __init__.py  client.py  request.py
providers/open_router/: __init__.py  client.py  request.py
tests/: conftest.py
tests/api/: test_api.py  test_app_lifespan_and_errors.py  test_auth.py  test_dependencies.py  test_detection.py  test_models_validators.py  test_optimization_handlers.py  test_request_utils.py  test_request_utils_filepaths_and_suggestions.py  test_response_models.py  test_routes_optimizations.py  test_server_module.py
tests/cli/: test_cli.py  test_cli_manager_edge_cases.py  test_entrypoints.py  test_process_registry.py
tests/config/: test_config.py  test_logging_config.py
tests/messaging/: test_discord_markdown.py  test_discord_platform.py  test_event_parser.py  test_extract_text.py  test_handler.py  test_handler_context_isolation.py  test_handler_format.py  test_handler_integration.py  test_handler_markdown_and_status_edges.py  test_limiter.py  test_messaging.py  test_messaging_factory.py  test_reliability.py  test_restart_reply_restore.py  test_robust_formatting.py  test_session_store_edge_cases.py  test_telegram.py  test_telegram_edge_cases.py  test_transcript.py  test_transcription.py  test_tree_concurrency.py  test_tree_processor.py  test_tree_queue.py  test_tree_repository.py  test_voice_handlers.py
tests/providers/: test_converter.py  test_error_mapping.py  test_llamacpp.py  test_lmstudio.py  test_nvidia_nim.py  test_nvidia_nim_request.py  test_open_router.py  test_parsers.py  test_provider_rate_limit.py  test_sse_builder.py  test_streaming_errors.py  test_subagent_interception.py
